# backend/domains/ch/clinical-network/src/dto/create-clinic.dto.ts
@@ -1,10 +1,11 @@
-// Generated from BP-CH-CLINICAL-NETWORK-001 v1.0.0 sha256:17207db7ca179e913375c7645edcf4c43c3e309891634856e04a72dd4a4d8f54
+// Generated from BP-CH-CLINICAL-NETWORK-001 v1.0.0 sha256:243dd2a69921d6544f3664d22ea24b32a34148a32d18659ca5d926815bfbe154
 export interface CreateClinicDto {
   code: string;
   cnpj: string;
   name: string;
   legal_name?: string | null;
   municipality_code?: string | null;
+  region_code: string;
   address?: string | null;
   contact_email?: string | null;
   contact_phone?: string | null;
